--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | pinball</title>
+    <title>Unity WebGL Player | Pinball</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/pinball.json");
+      UnityLoader.instantiate("unityContainer", "Build/pinball2.json");
     </script>
   </head>
   <body>
-    <div id="unityContainer" style="width: 974px; height: 1024px; margin: auto"></div>
+    <div id="unityContainer" style="width: 487px; height: 512px; margin: auto"></div>
   </body>
 </html>
